# tracker_microservices

./: .dockerignore  README.md  docker-compose.yml  requirements.txt
common/: Dockerfile  pyproject.toml
common/alembic/: env.py
common/alembic/versions/: 07fe181d9152_initial_schema.py  b1f2c3a4d5e6_seed_reference_data.py  c2d3e4f5a6b7_set_admin_password.py
common/task_tracker_common/db/: config.py  models.py  pool.py
common/task_tracker_common/dto/: __init__.py  base_dto.py
common/task_tracker_common/messaging/: __init__.py  rabbitmq.py
common/task_tracker_common/repository/: __init__.py  base_repository.py
gateway/: Dockerfile  README.md  env.example  pyproject.toml
gateway/alembic/: env.py
gateway/src/: cache.py  config.py  main.py  metrics.py  ratelimit.py  sessions.py
gateway/src/api/routers/: __init__.py  attachments.py  auth.py  comments.py  tags.py  tasks.py  users.py  web.py
gateway/src/api/schemas/: __init__.py  attachment.py  auth.py  comment.py  tags.py  task.py  user.py
gateway/static/css/: style.css
gateway/static/js/: app.js  tasks.js
gateway/templates/: base.html  index.html  login.html  tasks.html
monitoring/grafana/dashboards/: gateway.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
services/attachments/: Dockerfile  README.md  config.py  env.example  main.py  pyproject.toml
services/attachments/src/handlers/: __init__.py  attachment_handlers.py
services/attachments/src/repositories/: __init__.py  attachment_repository.py
services/attachments/src/storage/: __init__.py  s3.py
services/auth/: pyproject.toml
services/auth/src/repositories/: __init__.py  auth_repository.py
services/comments/: Dockerfile  config.py  main.py  pyproject.toml
services/comments/src/handlers/: __init__.py  comment_handlers.py
services/comments/src/repositories/: __init__.py  comment_repository.py
services/tags/: Dockerfile  config.py  main.py  pyproject.toml
services/tags/src/handlers/: __init__.py  tag_handlers.py
services/tags/src/repositories/: __init__.py  tag_repository.py
services/tasks/: Dockerfile  alembic.ini  config.py  env.example  main.py  pyproject.toml
services/tasks/alembic/: README  env.py
services/tasks/save/: test_import.py
services/tasks/src/db/: models.py
services/tasks/src/dto/: task_dto.py
services/tasks/src/handlers/: __init__.py  task_handlers.py
services/tasks/src/models/: task_model.py
services/tasks/src/repositories/: __init__.py  task_repository.py
services/tasks/src/schemas/: __init__.py  task.py
services/tasks/src/workers/: __init__.py
services/users/: Dockerfile  config.py  env.example  main.py  pyproject.toml
services/users/alembic/: env.py
services/users/src/handlers/: __init__.py  user_handlers.py
services/users/src/repositories/: __init__.py  user_repository.py
services/users/src/schemas/: __init__.py  user.py
test_service/app/: config.py  data_model.py  dto.py  main.py  pbmq_client.py  pool.py  repository.py  repository_impl.py  super_service.py
test_service/mesage_broker/: hello_world.py  hello_world_receiver.py
