# common/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task_tracker_common"
version = "0.1.3"
description = "Shared DTOs, repositories, and messaging utilities for task tracker microservices. Also alembic migration will be here"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.29.0",
    "fastapi>=0.104.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aio-pika>=9.3.0",
    "pydantic>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["task_tracker_common"]