# common/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task_tracker_common"
version = "0.1.3"
description = "Shared DTOs, repositories, and messaging utilities for task tracker microservices. Also alembic migration will be here"
dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "aio-pika>=9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["task_tracker_common"]