[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasks-service"
version = "0.1.0"
description = "Tasks microservice for Task Tracker"
dependencies = [
    "asyncpg>=0.29.0",
    "task_tracker_common>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
